# wave2d

./: CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  README.md
include/: DataFrame.hpp  DataFrameTemplate.hpp  ModelParameters.hpp  SolverController.hpp  SolverInterface.hpp  SolverParameters.hpp  ascii_art.hpp  cuda_defs.h  real_type.hpp  timer.hpp
include/solver_cuda/: CudaSolver.hpp  CudaSolverDataFrame.hpp
include/solver_omp/: OmpSolver.hpp
include/solver_ref/: RefSolver.hpp  RefSolverDataFrame.hpp
include/util/: DiscretisationParameters.hpp  ModelParameters.hpp
src/: CMakeLists.txt
src/animation/: CMakeLists.txt
src/solver_cuda/: CMakeLists.txt  CudaSolver.cu  solver_cuda.cu
src/solver_omp/: CMakeLists.txt  OmpSolver.cpp
src/solver_ref/: RefSolver.cpp  solver_ref.cpp
src/wave2d/: CMakeLists.txt  FrameToImage.cpp  FrameToImage.hpp  wave2d.cpp
